@@ -26,12 +26,27 @@
 #include <sys/ptrace.h>
 #include <sys/types.h>
 #include <sys/wait.h>
+#include <sys/syscall.h>
 #include <linux/user.h>
 #include <stdlib.h>
 #include <getopt.h>
 #include <ctype.h>
 
 #include "i18n.h"
+
+#ifdef I386
+	#define REG_ORIG_ACCUM orig_eax
+	#define REG_ACCUM eax
+	#define REG_PARAM1 ebx
+	#define REG_PARAM2 ecx
+	#define REG_PARAM3 edx
+#elif X86_64
+	#define REG_ORIG_ACCUM orig_rax
+	#define REG_ACCUM rax
+	#define REG_PARAM1 rdi
+	#define REG_PARAM2 rsi
+	#define REG_PARAM3 rdx
+#endif
 
 #define MAX_ATTACHED_PIDS 1024
 int num_attached_pids = 0;
@@ -177,35 +192,34 @@ int main(int argc, char **argv)
 			ptrace(PTRACE_GETREGS, pid, 0, &regs);
 		
 			/*unsigned int b = ptrace(PTRACE_PEEKTEXT, pid, regs.eip, 0);*/
-	
-			if (follow_forks && (regs.orig_eax == 2 || regs.orig_eax == 120)) {
-				if (regs.eax > 0)
-					attach(regs.eax);					
+			if (follow_forks && (regs.REG_ORIG_ACCUM == SYS_fork || regs.REG_ORIG_ACCUM == SYS_clone)) {
+				if (regs.REG_ACCUM > 0)
+					attach(regs.REG_ACCUM);					
 			}
-			if ((regs.orig_eax == 3 || regs.orig_eax == 4) && (regs.edx == regs.eax)) {
+			if ((regs.REG_ORIG_ACCUM == SYS_read || regs.REG_ORIG_ACCUM == SYS_write) && (regs.REG_PARAM3 == regs.REG_ACCUM)) {
 				for (i = 0; i < numfds; i++)
-					if (fds[i] == regs.ebx)
+					if (fds[i] == regs.REG_PARAM1)
 						break;
 				if (i != numfds || numfds == 0) {
-					if (regs.ebx != lastfd || regs.orig_eax != lastdir) {
-						lastfd = regs.ebx;
-						lastdir = regs.orig_eax;
+					if (regs.REG_PARAM1 != lastfd || regs.REG_ORIG_ACCUM != lastdir) {
+						lastfd = regs.REG_PARAM1;
+						lastdir = regs.REG_ORIG_ACCUM;
 						if (!no_headers)
-							printf("\n%sing fd %i:\n", regs.orig_eax == 3 ? "read" : "writ", lastfd);
+							printf("\n%sing fd %i:\n", regs.REG_ORIG_ACCUM == SYS_read ? "read" : "writ", lastfd);
 					}
 					if (!remove_duplicates || lastbuf == NULL
-							||  last_buf_size != regs.edx || 
-							bufdiff(pid, lastbuf, regs.ecx, regs.edx)) {
+							||  last_buf_size != regs.REG_PARAM3 || 
+							bufdiff(pid, lastbuf, regs.REG_PARAM2, regs.REG_PARAM3)) {
 
 						if (remove_duplicates) {
 							if (lastbuf)
 								free(lastbuf);
-							lastbuf = malloc(regs.edx);
-							last_buf_size = regs.edx;
+							lastbuf = malloc(regs.REG_PARAM3);
+							last_buf_size = regs.REG_PARAM3;
 						}
 
-						for (i = 0; i < regs.edx; i++) {
-							unsigned int a = ptrace(PTRACE_PEEKTEXT, pid, regs.ecx + i, 0);
+						for (i = 0; i < regs.REG_PARAM3; i++) {
+							unsigned int a = ptrace(PTRACE_PEEKTEXT, pid, regs.REG_PARAM2 + i, 0);
 							if (remove_duplicates)
 								lastbuf[i] = a & 0xff;
 
